--- a/III.MOD_CSS/portfolio.html
+++ b/III.MOD_CSS/portfolio.html
@@ -7,19 +7,20 @@
 	<link rel="stylesheet" href="portfolio.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-</head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300&display=swap" rel="stylesheet"></head>
 <body>
 <h1>Flor Paramidani Graphic Designer</h1>
-<div class="container-fluid">
-<div class="container"> <img class="img-fluid" src="img/New-Logo-Flor-01.gif" alt="fashion"></div>
-<div class="container"> <img class="img-fluid" src="img/Flor_p_beautiful_model_dress_with_Jean_Paul_Gaultiers_iconic_dr_281795f8-354e-42af-8616-17d1b32f6890.png" alt="Jean Paul Gaultier"></div>		
-<div class="container"> <img class="img-fluid" src="img/New-Logo-Flor-02.gif" alt="gaultier"></div>		
-<div class="container"> <img class="img-fluid" src="img/Flor_p_beautiful_model_dress_with_Jean_Paul_Gaultiers_iconic_dr_945552be-3e65-497f-9557-318a6321bd41.png" alt="jean paul gaultier"></div>
+<div class="contenedor">
+<div id="azul"> <img  src="img/New-Logo-Flor-01.gif" alt="fashion"></div>
+<div id="azul"> <img  src="img/Flor_p_beautiful_model_dress_with_Jean_Paul_Gaultiers_iconic_dr_281795f8-354e-42af-8616-17d1b32f6890.png" alt="Jean Paul Gaultier"></div>		
+<div id="azul"> <img  src="img/New-Logo-Flor-02.gif" alt="gaultier"></div>		
+<div id="azul"> <img  src="img/Flor_p_beautiful_model_dress_with_Jean_Paul_Gaultiers_iconic_dr_945552be-3e65-497f-9557-318a6321bd41.png" alt="jean paul gaultier"></div>
 
 </div>
-<p><a href="file:///C:/Users/FLOR/Desktop/MOD%20II_Portfolio%20Flor%20Paramidani/portfolio.html">Portfolio</a>Lorem ipsum dolor sit amet consectetur,<br>
-		adipisicing elit. Recusandae aspernatur, <br>quas mollitia id rerum asperiores est, <br>
+<p class="destacados"><a href="file:///C:/Users/FLOR/Desktop/MOD%20II_Portfolio%20Flor%20Paramidani/portfolio.html">Portfolio</a>Lorem ipsum dolor sit amet consectetur,<br>
+		adipisicing elit. Recusandae aspernatur,<br>quas mollitia id rerum asperiores est, <br>
 		repudiandae explicabo eos illo sequi cum sint, velit ipsa fuga. <br>Eaque expedita asperiores odio.
 		orem ipsum dolor sit amet consectetur,<br>
 		adipisicing elit. Recusandae aspernatur, <br>quas mollitia id rerum asperiores est, <br>
